fix alignment

--- a/src/app/_shared-components/AppLayout/CollapsibleItem/CollapsibleItem.module.scss
+++ b/src/app/_shared-components/AppLayout/CollapsibleItem/CollapsibleItem.module.scss
@@ -88,7 +88,7 @@
 }
 
 .mainList {
-	@apply space-y-1;
+	@apply space-y-1 pl-[1.6rem];
 }
 
 .triggerWrapper {
